--- a/Lyrics and Description EDA.ipynb
+++ b/Lyrics and Description EDA.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "e2d096b7",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "d169e3b0",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "923b5a86",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "a4a8b8d4",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "06522af9",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "37d70801",
    "metadata": {},
    "outputs": [],
@@ -201,8 +201,9 @@
     "\n",
     "        with open(song_path, 'r', encoding='utf-8') as s:\n",
     "            lyrics = s.read()\n",
-    "            title = str(re.match('', lyrics))\n",
-    "            lyrics_c = re.sub(title, '', lyrics)\n",
+    "            title = re.sub(path + '/'+artist +'_' , '', song_path)\n",
+    "            title = re.sub('.txt', '', title)\n",
+    "            lyrics_c = re.sub('^\".+\"', '', lyrics)\n",
     "\n",
     "            lyric_df.append({\n",
     "                'artist' :artist,\n",
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "id": "debcac5a",
    "metadata": {},
    "outputs": [],
@@ -234,13 +235,16 @@
     "        twitter_path = os.path.join(data_location, twitter_folder, file)\n",
     "\n",
     "        temp_df = pd.read_csv(twitter_path, sep='\\t', encoding='utf-8', on_bad_lines='skip')\n",
+    "\n",
+    "        artist = re.sub('_followers_data.txt', '', file)\n",
+    "\n",
     "        desc = temp_df['description']\n",
-    "        \n",
+    "\n",
     "        for i in range(len(temp_df)):\n",
     "            twitter_df.append({\n",
-    "                'artist': re.sub('_followers_data.txt', '', artist),\n",
+    "                'artist': artist,\n",
     "                'description': str(desc.iloc[i])\n",
-    "                })\n",
+    "            })\n",
     "twitter_df = pd.DataFrame(twitter_df)\n",
     "twitter_df = twitter_df[twitter_df['description']!= 'nan']"
    ]
@@ -258,27 +262,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "71c73d86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "punctuation = '|'.join(punctuation) # speeds up comparison"
+    "punctuation = string.punctuation # speeds up comparison"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "b603bad2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean(data, sw):\n",
-    "    text = data['description']\n",
-    "    \n",
-    "    text = ' '.join(data)\n",
+    "def clean(data, col, sw):\n",
+    "    text = ' '.join(data[col])\n",
     "    # Remove punctuation\n",
-    "    text = re.sub(sw, '', text)\n",
+    "    re.sub(re.escape(punctuation), '', text)\n",
     "    # Convert to lowercase and split into words\n",
     "    words = str(text).lower().split()\n",
     "    # Remove stopwords\n",
@@ -288,7 +290,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
+   "id": "11590b1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create your clean twitter data here\n",
+    "robyn_t = twitter_df[twitter_df['artist'] == 'robynkonichiwa']\n",
+    "cher_t = twitter_df[twitter_df['artist'] == 'cher']\n",
+    "\n",
+    "twitter_robyn = clean(robyn_t, 'description', sw)  \n",
+    "twitter_cher = clean(cher_t, 'description', sw)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "id": "e0f22e10",
    "metadata": {},
    "outputs": [],
@@ -297,8 +314,8 @@
     "robyn_l = lyric_df[lyric_df['artist'] == 'robyn']\n",
     "cher_l = lyric_df[lyric_df['artist'] == 'cher']\n",
     "\n",
-    "lyric_robyn = [clean(text) for text in robyn_l['lyrics']]    \n",
-    "lyric_cher = [clean(text) for text in cher_l['lyrics']]    "
+    "lyric_robyn = clean(robyn_l, 'lyrics', sw)\n",
+    "lyric_cher = clean(cher_l, 'lyrics', sw)"
    ]
   },
   {
@@ -313,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "id": "f0bbedd9",
    "metadata": {},
    "outputs": [
@@ -321,12 +338,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 0 tokens in the data.\n",
-      "There are 0 unique tokens in the data.\n",
-      "There are 0 characters in the data.\n",
-      "The lexical diversity is 0.000 in the data.\n",
+      "There are 6482700 tokens in the data.\n",
+      "There are 361761 unique tokens in the data.\n",
+      "There are 40577660 characters in the data.\n",
+      "The lexical diversity is 0.056 in the data.\n",
       "Twitter- Robyn: \n",
-      "[0, 0, 0, 0, []]\n"
+      "[6482700, 361761, 0.05580406312184738, 40577660, [('&', 68600), ('|', 62264), ('love', 41884), ('music', 41116), ('-', 39296)]]\n",
+      "There are 67470576 tokens in the data.\n",
+      "There are 2220461 unique tokens in the data.\n",
+      "There are 413450516 characters in the data.\n",
+      "The lexical diversity is 0.033 in the data.\n",
+      "Twitter- Cher: \n",
+      "[67470576, 2220461, 0.03291006438124969, 413450516, [('love', 795532), ('&', 686064), ('|', 514860), ('life', 344716), ('de', 292312)]]\n",
+      "There are 14602 tokens in the data.\n",
+      "There are 2643 unique tokens in the data.\n",
+      "There are 73854 characters in the data.\n",
+      "The lexical diversity is 0.181 in the data.\n",
+      "Lyrics- Robyn: \n",
+      "[14602, 2643, 0.18100260238323518, 73854, [('know', 297), ('love', 243), ('got', 240), ('like', 223), ('baby', 174)]]\n",
+      "There are 33711 tokens in the data.\n",
+      "There are 4592 unique tokens in the data.\n",
+      "There are 168274 characters in the data.\n",
+      "The lexical diversity is 0.136 in the data.\n",
+      "Lyrics- Cher: \n",
+      "[33711, 4592, 0.13621666518347128, 168274, [('love', 893), ('know', 448), ('time', 299), ('see', 286), ('one', 267)]]\n"
      ]
     }
    ],
@@ -334,21 +369,11 @@
     "# calls to descriptive_stats here\n",
     "print('Twitter- Robyn: \\n' + str(descriptive_stats(twitter_robyn, verbose=True)))\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea3d2f07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "descriptive_stats(str(lyric_cher))\n",
+    "print('Twitter- Cher: \\n' + str(descriptive_stats(twitter_cher, verbose=True)))\n",
     "\n",
-    "descriptive_stats(str(twitter_robyn))\n",
+    "print('Lyrics- Robyn: \\n' + str(descriptive_stats(lyric_robyn, verbose=True)))\n",
     "\n",
-    "descriptive_stats(str(twitter_cher))"
+    "print('Lyrics- Cher: \\n' + str(descriptive_stats(lyric_cher, verbose=True)))"
    ]
   },
   {
@@ -358,13 +383,13 @@
    "source": [
     "Q: How do you think the \"top 5 words\" would be different if we left stopwords in the data? \n",
     "\n",
-    "A: I\n",
+    "A: If we left in the stop words, I think the top 5 words would include something like \"the\", \"in\", \"a\", \"it\", or \"and\". Since these words are pretty commonly used in everyday phrases and lyrics, I think it would make sense for them to show up as the top 5 words.\n",
     "\n",
     "---\n",
     "\n",
     "Q: What were your prior beliefs about the lexical diversity between the artists? Does the difference (or lack thereof) in lexical diversity between the artists conform to your prior beliefs? \n",
     "\n",
-    "A: \n"
+    "A: I haven't actually listened to music by either cher or Robyn before- I think both were popular when I was a bit too young to be listening to their music. But from looking at the analysis here, they seem to have similar themes of love and knownig things.\n"
    ]
   },
   {
@@ -387,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "id": "753a5a3e",
    "metadata": {},
    "outputs": [],
@@ -408,12 +433,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "id": "269cd433",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "for token in (list((' '.join(twitter_robyn)))):\n",
+    "    count = Counter()\n",
+    "    if emoji.is_emoji(token)==True:\n",
+    "        emoticon_robyn = ' ' + token\n",
+    "    elif not emoji.is_emoji(token)==True: continue\n",
+    "    else: continue\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94fdf12f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Counter(str(emoticon_robyn))\n"
    ]
   },
   {
